# OceanPath

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  blca_experiment.py  cl_exp.py  crc_experiments.py  mil_pretrain.py  pyproject.toml  sl_exp.py
.github/workflows/: ci.yml
configs/: analyze.yaml  benchmark.yaml  build_mmap.yaml  compare.yaml  evaluate.yaml  export.yaml  extract.yaml  linear_probing.yaml  make_splits.yaml  pipeline.yaml  pretrain.yaml  serve.yaml  sweep.yaml  train.yaml  train_supervised.yaml
configs/data/: TCGA_BRAF.yaml  blca.yaml  cptac_nsclc.yaml  gej.yaml  gej_univ2.yaml  gej_univ2_4096.yaml  gej_univ2_8192.yaml  panda.yaml  tcga_nsclc.yaml  uni2h_pretrain.yaml  uni2h_pretrain_2048.yaml  uni2h_pretrain_512.yaml
configs/encoder/: conch.yaml  conch_v15.yaml  gemma4_26b.yaml  gemma4_e4b.yaml  gigapath.yaml  hoptimus1.yaml  resnet50.yaml  uni2h.yaml  univ1.yaml  univ2.yaml  virchow.yaml  virchow2.yaml
configs/eval/: default.yaml
configs/experiment/: supervised.yaml
configs/export/: default.yaml
configs/extraction/: default.yaml
configs/model/: abmil.yaml  bimamba.yaml  mamba2mil.yaml  mambamil.yaml  mhabmil.yaml  perceiver.yaml  static.yaml  transmil.yaml  vit.yaml
configs/pipeline_profile/: pretrain_only.yaml  supervised.yaml
configs/platform/: hpc.yaml  local.yaml
configs/pretrain/: byol.yaml  dinov2.yaml  jepa.yaml  simclr.yaml  vicreg.yaml
configs/pretrain_training/: base.yaml  byol.yaml  dinov2.yaml  jepa.yaml  lejepa_2c.yaml  lejepa_mc.yaml  simclr.yaml  vicreg.yaml
configs/runtime/: default.yaml
configs/splits/: blca_custom.yaml  blca_heldout.yaml  gej_custom.yaml  heldout_80_10_10.yaml  kfold5.yaml  mccv_10x.yaml  nested_5x3.yaml  pretrain_train_val.yaml
configs/storage/: mmap.yaml
configs/sweep_space/: blca.yaml  gej.yaml  gej_mambamil.yaml  gej_transmil.yaml  pretrain.yaml  supervised.yaml
configs/training/: default.yaml  gej.yaml  supervised_mil.yaml
data/: data_module.py  mmap_datamodule.py
data/data_prep/: panda.ipynb  surgen.ipynb
data/uni_v2_features_prep/: convert_h5_to_mmap.py  univ2_csv_construction.ipynb  univ2_h_download.py
examples/blca/: README.md  manifest.example.csv
logs/: oceanpath_pretrain_1133002.err  oceanpath_pretrain_1133002.out  oceanpath_pretrain_1133174.err  oceanpath_pretrain_1133174.out
models/: ABMIL.py  CACMP.py  CHAMP.py  CLAM.py  CRC_MIL.py  DSMIL.py  RRTMIL.py  StaticMIL.py  Test1.py  TransMIL.py  WIKGMIL.py  base_modules.py  test_MIL.py  wsi_model.py
models/MIL/: ABMIL.py  CLAM.py  DSMIL.py  StaticMIL.py  TransMIL.py  wsi_model.py
modules/: cross_val.py  k_folds_exp.py  mil_pretrain.py  oof_exp.py  sl_lit.py
modules/cv/: exp_config.py  final_strategy.py  kfolds.py  wsi_module.py
modules/cv/utils/: callbacks.py  eval_utils.py  train_utils.py
notebooks/: data_analysis.ipynb  test_mc.ipynb
scripts/: analyze.py  benchmark.py  benchmark_batching.py  build_mmap.py  check_coord_scale.py  collect_lp_results.py  compare_experiments.py  evaluate.py  experiment.py  export_model.py  extract_features.py  linear_probing.py  make_splits.py  oof.py  pipeline.py  pretrain.py  pretraining_data_cleanining.py  run_label_efficiency.sh  run_lp_baselines.sh  run_lp_ssl.sh  run_supervised_baselines.sh  run_supervised_braf_nsclc.sh  serve.py  sweep.py  test_aug_pipeline.py  train.py  train_supervised.py  vis.py  visualize_augmentations.py  visualize_mmap_coverage.py
src/oceanpath/: __init__.py
src/oceanpath/config/: __init__.py  access.py  paths.py
src/oceanpath/contracts/: __init__.py  slide_ids.py  stages.py
src/oceanpath/data/: __init__.py  batching.py  datamodule.py  dataset.py  feature_extract.py  mmap_builder.py  pretrain_datamodule.py  pretrain_dataset.py  splits.py
src/oceanpath/datasets/: __init__.py  datamodule.py  mmap.py
src/oceanpath/eval/: __init__.py  attention.py  compare.py  comparison.py  core.py  cross_val.py  ensemble.py  inference.py  metrics.py  plots.py  significance.py  umap_viz.py
src/oceanpath/export/: __init__.py  exporter.py  model_card.py
src/oceanpath/extraction/: __init__.py  trident.py
src/oceanpath/models/: __init__.py  abmil.py  base.py  bimamba.py  components.py  mambamil.py  mhabmil.py  perceiver.py  static.py  transmil.py  vit.py  wsi_classifier.py
src/oceanpath/modules/: __init__.py  callbacks.py  extract_slide_embeddings.py  finalize.py  linear_probing_sklearn.py  train_module.py
src/oceanpath/pipeline/: README.md  __init__.py  dag.py  transaction.py  transactions.py
src/oceanpath/runtime/: __init__.py  context.py  logging.py  reporting.py
src/oceanpath/serving/: __init__.py  exporter.py  model_card.py  server.py
src/oceanpath/splitting/: __init__.py  core.py
src/oceanpath/ssl/: __init__.py  augmentation.py  callbacks.py  heads.py  losses.py  pretrain_module.py
src/oceanpath/ssl/data/: __init__.py  augmentation.py  datamodule.py  dataset.py
src/oceanpath/ssl/modules/: __init__.py  callbacks.py  heads.py  losses.py  pretrain_module.py
src/oceanpath/storage/: __init__.py  mmap.py
src/oceanpath/training/: __init__.py  _helpers.py  folds.py  lightning.py
src/oceanpath/utils/: __init__.py  json.py  memory.py  repro.py
src/oceanpath/viz/: __init__.py  coverage.py
src/oceanpath/workflows/: __init__.py  benchmark.py  evaluation.py  export.py  extraction.py  finalize.py  mmap.py  pipeline.py  serving.py  splitting.py  supervised_pipeline.py  training.py
tests/: conftest.py  test_data.py  test_eval.py  test_evaluation.py  test_export.py  test_foundation.py  test_linear_probe_label_efficiency.py  test_memory.py  test_models.py  test_pipeline.py  test_pretrain_data.py  test_repro.py  test_run_identity.py  test_splitting.py  test_ssl_pretrain.py  test_storage.py  test_training.py
tools/: visualize_mmap_coverage.py
utils/: benchmarking.py  combine_features.py  config_utils.py  eval_utils.py  train_utils.py
