[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oceanpath"
version = "0.1.0"
description = "MIL pretraining, benchmarking, and deployment for computational pathology"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.129.0",
    "h5py>=3.15.1",
    "huggingface-hub>=1.4.1",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "lightning>=2.6.1",
    "litlogger>=0.1.7",
    "numpy>=2.2.6",
    "nystrom-attention>=0.0.14",
    "omegaconf>=2.3.0",
    "onnx>=1.20.1",
    "onnxruntime<1.24",
    "opensdpc",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.3",
    "trident",
    "umap-learn>=0.5.11",
    "uvicorn>=0.40.0",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
serve = [
    "onnxruntime-gpu<1.24",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv.sources]
opensdpc = { git = "https://github.com/WonderLandxD/opensdpc" }
trident = { git = "https://github.com/mahmoodlab/TRIDENT" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oceanpath"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"] # E=Error, F=Pyflakes, I=Isort, W=Warning

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that take >10s (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require CUDA",
]

[tool.setuptools.packages.find]
where = ["src"]
